# Sudoku

./: CMakeLists.txt  LICENSE  README.md  SudokuApp.cpp  SudokuApp.h  main.cpp  pch.h
SudokuLib/: Background.cpp  Background.h  BoardNumber.cpp  BoardNumber.h  CMakeLists.txt  Container.cpp  Container.h  Declaration.cpp  Declaration.h  DeclarationContainer.cpp  DeclarationContainer.h  DeclarationNum.cpp  DeclarationNum.h  DeclarationSparty.cpp  DeclarationSparty.h  DeclarationVault.cpp  DeclarationVault.h  DeclarationXray.cpp  DeclarationXray.h  FindGivens.cpp  FindGivens.h  FindNumber.cpp  FindNumber.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  LoadLevel.cpp  LoadLevel.h  Mainframe.cpp  Mainframe.h  NumberD.cpp  NumberD.h  NumberG.cpp  (+21 more)
Tests/: CMakeLists.txt  GameTest.cpp  LevelFileTest.cpp  PlayableAreaTest.cpp  VisitorTest.cpp  XrayTest.cpp
levels/: level1.xml  level3PotentialFeature.xml  testlevel.xml
